--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@
 spring.datasource.url=jdbc:mysql://localhost/simple_faculte_reception?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.main.allow-bean-definition-overriding=true
 spring.application.name=microservice-reception
-#eureka.client.serviceUrl.defaultZone:http://192.168.0.109:9102/eureka/
+eureka.client.serviceUrl.defaultZone:http://192.168.0.109:9102/eureka/
 
 
 spring.datasource.username=root
